--- a/app/src/main/res/color/navi_color.xml
+++ b/app/src/main/res/color/navi_color.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:color="@color/button"/>
+        android:color="@color/main"/>
     <item
         android:state_checked="false"
-        android:color="@color/white"/>
+        android:color="@color/button_light"/>
 </selector>
