--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,12 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- 앱 브랜드 컬러 -->
-    <color name="main">#F8AA4F</color>
+    <color name="main">#FF910F</color>
     <color name="button">#556FCB</color>
+    <color name="button_light">#C5CFEA</color>
+    <color name="background">#EEEDEC</color>
 
-    <!-- 폰트 컬러 (블랙) -->
+    <!-- 폰트 컬러 (블랙) -->view_round_main.xml
     <color name="font_black">#191919</color>
     <!-- 폰트 컬러 (그레이) -->
     <color name="font_grey">#767676</color>
@@ -21,7 +23,8 @@
     <!-- 폰트 컬러 (매우 밝은 그레이) -->
     <color name="font_grey_extra_light">#D9D9D9</color>
     <!-- 폰트 컬러 (블루 계열) -->
-    <color name="royal_blue">#FF3C82D9</color>
+    <color name="font_blue">#3360FF</color>
+    <color name="royal_blue">#3360FF</color>
     <color name="royal_blue50">#803C82D9</color>
     <color name="lavender_blue">#FFB4CEFE</color>
 
