--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -110,6 +110,20 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Text.Bold_18_Main" parent="android:TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/main</item>
+        <item name="android:fontFamily">@font/app_font</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Text.Bold_18_Blue" parent="android:TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/font_blue</item>
+        <item name="android:fontFamily">@font/app_font</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="Text.Medium_18_Black" parent="android:TextAppearance">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/font_black</item>
@@ -132,7 +146,7 @@
 
     <style name="Text.Bold_16_Blue" parent="android:TextAppearance">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/royal_blue</item>
+        <item name="android:textColor">@color/font_blue</item>
         <item name="android:fontFamily">@font/app_font</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -174,7 +188,7 @@
 
     <style name="Text.Regular_16_blue" parent="android:TextAppearance">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/royal_blue</item>
+        <item name="android:textColor">@color/font_blue</item>
         <item name="android:fontFamily">@font/app_font</item>
         <item name="android:textStyle">normal</item>
     </style>
