--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -12,6 +12,7 @@
             layout="@layout/view_toplayout" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/group_info_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,10 +72,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_group"
-                android:layout_marginTop="22dp"/>
+                android:layout_marginTop="22dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/no_group_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +84,7 @@
             app:layout_constraintTop_toBottomOf="@id/view_top"
             app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone">
+
             <TextView
                 android:id="@+id/tv_emptygroup"
                 android:layout_width="wrap_content"
@@ -91,7 +94,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="226dp"
                 android:text="@string/Home_error_empty_group"
-                android:textAppearance="@style/Text.Bold_18_Main"/>
+                android:textAppearance="@style/Text.Bold_18_Main" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_creategroup"
@@ -104,8 +107,8 @@
                 android:text="@string/Home_Button_createnewgroup"
                 android:textAppearance="@style/Text.Bold_16_Main"
                 android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="44dp"/>
-            
+                android:layout_marginTop="44dp" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -116,7 +119,27 @@
                 android:text="그룹 참가하기"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="24dp"
-                android:textAppearance="@style/Text.Bold_16_Blue"/>
+                android:textAppearance="@style/Text.Bold_16_Blue" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/group_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_top_48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="200dp"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="visible">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_group_info" />
+
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
