--- a/app/src/main/res/layout/frag_history.xml
+++ b/app/src/main/res/layout/frag_history.xml
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:layout_marginTop="10dp"
-                    android:text="SHELLY"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="@+id/layout_profile"
