--- a/app/src/main/res/layout/frag_group_detail.xml
+++ b/app/src/main/res/layout/frag_group_detail.xml
@@ -2,57 +2,46 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/title_layout"
+        android:id="@+id/cl_vote_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="30dp"
         app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/img_history_top"
-            android:layout_width="12dp"
-            android:layout_height="17dp"
-            android:layout_marginStart="63dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/my_lunch"
-            app:srcCompat="@drawable/history_top"
-            app:tint="@color/main" />
-
-        <TextView
-            android:id="@+id/my_lunch"
+        
+        <ImageButton
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="48dp"
-            android:fontFamily="@font/notosans_kr_bold"
-            android:text="월요일 점심 팟"
-            android:textColor="@color/main"
-            android:textSize="23sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/ic_back"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12명"
+            android:paddingHorizontal="15dp"
+            android:textAppearance="@style/Text.Bold_16_Black"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/img_history_bottom"
-            app:layout_constraintStart_toEndOf="@+id/img_history_top" />
+            android:background="@drawable/view_round_white_filled"/>
 
-        <ImageView
-            android:id="@+id/img_history_bottom"
-            android:layout_width="12dp"
-            android:layout_height="17dp"
-            android:layout_marginEnd="63dp"
-            app:layout_constraintBottom_toBottomOf="@+id/my_lunch"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/history_bottom"
-            app:tint="@color/main" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+        
+        
     <LinearLayout
         android:id="@+id/vote_layout"
-        app:layout_constraintTop_toBottomOf="@id/title_layout"
+        app:layout_constraintTop_toBottomOf="@id/cl_vote_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
@@ -64,9 +53,51 @@
             android:id="@+id/vote_started_layout"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
+            android:visibility="gone"
             android:layout_marginHorizontal="40dp"
             android:layout_height="wrap_content">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/title_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
+                <ImageView
+                    android:id="@+id/img_history_top"
+                    android:layout_width="12dp"
+                    android:layout_height="17dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/my_lunch"
+                    app:srcCompat="@drawable/history_top"
+                    app:tint="@color/main" />
+
+                <TextView
+                    android:id="@+id/my_lunch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="48dp"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:text="월요일 점심 팟"
+                    android:textColor="@color/main"
+                    android:textSize="23sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/img_history_bottom"
+                    app:layout_constraintStart_toEndOf="@+id/img_history_top" />
+
+                <ImageView
+                    android:id="@+id/img_history_bottom"
+                    android:layout_width="12dp"
+                    android:layout_height="17dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/my_lunch"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:srcCompat="@drawable/history_bottom"
+                    app:tint="@color/main" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,11 +151,59 @@
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/vote_not_started_layout"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="64sp"
+                android:layout_gravity="center"
+                android:shadowColor="#000000"
+                android:shadowDx="1.3"
+                android:shadowDy="1.3"
+                android:shadowRadius="10"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:text="E458" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp">
+                <TextView
+                    android:id="@+id/tv_groupname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="월요일 점심 팟"
+                    android:textAppearance="@style/Text.Bold_24_Grey"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tv_groupname"
+                    android:text="●"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="30dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_groupname"
+                    android:text="●"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="30dp"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
@@ -156,11 +235,11 @@
 
             </LinearLayout>
 
-            <!--            <View-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="3dp"-->
-            <!--                android:layout_marginHorizontal="40dp"-->
-            <!--                android:background="@color/background_dark" />-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginHorizontal="40dp"
+                android:background="@color/background_dark" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
