--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,6 +61,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Text.Bold_24_Grey" parent="android:TextAppearance">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/font_grey</item>
+        <item name="android:fontFamily">@font/app_font</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="Text.Bold_24_Blue" parent="android:TextAppearance">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/royal_blue</item>
