--- a/app/src/main/res/layout/frag_group_detail.xml
+++ b/app/src/main/res/layout/frag_group_detail.xml
@@ -355,6 +355,7 @@
                     android:id="@+id/history_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="50dp"
                     tools:listitem="@layout/history_list_item" />
 
             </LinearLayout>
