--- a/app/src/main/res/layout/item_vote_category.xml
+++ b/app/src/main/res/layout/item_vote_category.xml
@@ -53,27 +53,27 @@
 
     <ImageButton
         android:id="@+id/btn_good"
-        android:layout_width="17dp"
-        android:layout_height="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="@+id/layout"
         app:layout_constraintTop_toBottomOf="@+id/layout"
-        app:srcCompat="@drawable/vote_good" />
+        app:srcCompat="@drawable/ic_thumb_up" />
 
     <ImageButton
         android:id="@+id/btn_bad"
-        android:layout_width="17dp"
-        android:layout_height="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/btn_good"
         app:layout_constraintStart_toEndOf="@+id/btn_good"
         app:layout_constraintTop_toTopOf="@+id/btn_good"
-        app:srcCompat="@drawable/vote_bad"
+        app:srcCompat="@drawable/ic_thumb_down"
         />
 
     <ImageView
