--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -144,7 +144,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/group_rv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/item_group_info" />
 
