--- a/app/src/main/res/layout/item_group_info.xml
+++ b/app/src/main/res/layout/item_group_info.xml
@@ -1,34 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="10dp">
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/img_app_logo" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_groupinfoimage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/view_round_main"
+            android:src="@drawable/img_app_logo" />
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:layout_marginStart="10dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/cv_groupinfoimage"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/team_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="월요일 점심 팟" />
+            android:text="월요일 점심 팟"
+            android:textSize="14sp" />
 
         <TextView
-            android:layout_marginTop="10dp"
             android:id="@+id/team_number_tv"
             android:layout_width="wrap_content"
-            android:textSize="14sp"
             android:layout_height="wrap_content"
-            android:text="12명" />
+            android:layout_marginTop="10dp"
+            android:text="12명"
+            android:textSize="14sp" />
     </LinearLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_vote_proceeding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:text="투표 진행 중"
+        android:visibility="gone"
+        android:textAppearance="@style/Text.Bold_16_Blue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
